--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prosemirror-schema-basic": "^1.2.3",
     "prosemirror-schema-list": "^1.4.1",
     "prosemirror-state": "^1.4.3",
+    "prosemirror-transform": "^1.10.4",
     "prosemirror-view": "^1.33.9"
   },
   "devDependencies": {
